--- a/src/DifApi/DifApi.csproj
+++ b/src/DifApi/DifApi.csproj
@@ -51,20 +51,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Analysers\TextIndexer.cs" />
     <Compile Include="AutoInvoker.cs" />
     <Compile Include="HttpAppBase.cs" />
     <Compile Include="HttpController.cs" />
-    <Compile Include="HttpControllerX.cs" />
+    <Compile Include="IHasHttpInterface.cs" />
+    <Compile Include="IRequestAnalyser.cs" />
     <Compile Include="JsonSerialiser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HttpProxy.cs" />
-    <Compile Include="RequestStore.cs" />
+    <Compile Include="RequestAnalysisEngine.cs" />
+    <Compile Include="RequestContext.cs" />
+    <Compile Include="Analysers\RequestStore.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
