--- a/src/DifApi/DifApi.csproj
+++ b/src/DifApi/DifApi.csproj
@@ -51,6 +51,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Analysers\HttpLogger.cs" />
+    <Compile Include="Analysers\LogEntry.cs" />
+    <Compile Include="Analysers\RequestNode.cs" />
+    <Compile Include="Analysers\ResourceList.cs" />
     <Compile Include="Analysers\TextIndexer.cs" />
     <Compile Include="AutoInvoker.cs" />
     <Compile Include="HttpAppBase.cs" />
@@ -64,12 +68,169 @@
     <Compile Include="RequestAnalysisEngine.cs" />
     <Compile Include="RequestContext.cs" />
     <Compile Include="Analysers\RequestStore.cs" />
+    <Compile Include="WebApp.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="wwwroot\.bowerrc" />
+    <None Include="wwwroot\.jshintrc" />
+    <None Include="wwwroot\.travis.yml" />
+    <None Include="wwwroot\app\bower_components\angular-loader\.bower.json" />
+    <None Include="wwwroot\app\bower_components\angular-loader\angular-loader.min.js.map" />
+    <None Include="wwwroot\app\bower_components\angular-loader\bower.json" />
+    <None Include="wwwroot\app\bower_components\angular-loader\LICENSE.md" />
+    <None Include="wwwroot\app\bower_components\angular-loader\package.json" />
+    <None Include="wwwroot\app\bower_components\angular-loader\README.md" />
+    <None Include="wwwroot\app\bower_components\angular-mocks\.bower.json" />
+    <None Include="wwwroot\app\bower_components\angular-mocks\bower.json" />
+    <None Include="wwwroot\app\bower_components\angular-mocks\LICENSE.md" />
+    <None Include="wwwroot\app\bower_components\angular-mocks\package.json" />
+    <None Include="wwwroot\app\bower_components\angular-mocks\README.md" />
+    <None Include="wwwroot\app\bower_components\angular-route\.bower.json" />
+    <EmbeddedResource Include="wwwroot\app\bower_components\angular-route\angular-route.min.js.map" />
+    <None Include="wwwroot\app\bower_components\angular-route\bower.json" />
+    <None Include="wwwroot\app\bower_components\angular-route\LICENSE.md" />
+    <None Include="wwwroot\app\bower_components\angular-route\package.json" />
+    <None Include="wwwroot\app\bower_components\angular-route\README.md" />
+    <None Include="wwwroot\app\bower_components\angular\.bower.json" />
+    <None Include="wwwroot\app\bower_components\angular\angular.min.js.gzip" />
+    <None Include="wwwroot\app\bower_components\angular\angular.min.js.map" />
+    <None Include="wwwroot\app\bower_components\angular\bower.json" />
+    <None Include="wwwroot\app\bower_components\angular\LICENSE.md" />
+    <None Include="wwwroot\app\bower_components\angular\package.json" />
+    <None Include="wwwroot\app\bower_components\angular\README.md" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\.bower.json" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\.editorconfig" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\.jscsrc" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\.jshintrc" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\.travis.yml" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\CHANGELOG.md" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\CONTRIBUTING.md" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\dist\.editorconfig" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\dist\.htaccess" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\dist\doc\css.md" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\dist\doc\extend.md" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\dist\doc\faq.md" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\dist\doc\html.md" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\dist\doc\js.md" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\dist\doc\misc.md" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\dist\doc\TOC.md" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\dist\doc\usage.md" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\package.json" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\README.md" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\src\.editorconfig" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\src\doc\css.md" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\src\doc\extend.md" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\src\doc\faq.md" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\src\doc\html.md" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\src\doc\js.md" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\src\doc\misc.md" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\src\doc\TOC.md" />
+    <None Include="wwwroot\app\bower_components\html5-boilerplate\src\doc\usage.md" />
+    <EmbeddedResource Include="wwwroot\app\lib\bootstrap-3-3-7-dist\css\bootstrap-theme.css.map" />
+    <EmbeddedResource Include="wwwroot\app\lib\bootstrap-3-3-7-dist\css\bootstrap-theme.min.css.map" />
+    <EmbeddedResource Include="wwwroot\app\lib\bootstrap-3-3-7-dist\css\bootstrap.css.map" />
+    <EmbeddedResource Include="wwwroot\app\lib\bootstrap-3-3-7-dist\css\bootstrap.min.css.map" />
+    <None Include="wwwroot\app\lib\bootstrap-3-3-7-dist\fonts\glyphicons-halflings-regular.eot" />
+    <None Include="wwwroot\app\lib\bootstrap-3-3-7-dist\fonts\glyphicons-halflings-regular.ttf" />
+    <None Include="wwwroot\app\lib\bootstrap-3-3-7-dist\fonts\glyphicons-halflings-regular.woff" />
+    <None Include="wwwroot\app\lib\bootstrap-3-3-7-dist\fonts\glyphicons-halflings-regular.woff2" />
+    <None Include="wwwroot\bower.json" />
+    <None Include="wwwroot\LICENSE" />
+    <None Include="wwwroot\package.json" />
+    <None Include="wwwroot\README.md" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="wwwroot\.gitignore" />
+    <Content Include="wwwroot\app\bower_components\angular-loader\angular-loader.js" />
+    <Content Include="wwwroot\app\bower_components\angular-loader\angular-loader.min.js" />
+    <Content Include="wwwroot\app\bower_components\angular-mocks\angular-mocks.js" />
+    <Content Include="wwwroot\app\bower_components\angular-mocks\ngAnimateMock.js" />
+    <Content Include="wwwroot\app\bower_components\angular-mocks\ngMock.js" />
+    <Content Include="wwwroot\app\bower_components\angular-mocks\ngMockE2E.js" />
+    <EmbeddedResource Include="wwwroot\app\lib\tree\abn_tree.css" />
+    <EmbeddedResource Include="wwwroot\app\lib\tree\abn_tree_directive.js" />
+    <EmbeddedResource Include="wwwroot\app\components\log-explore\log-explorer.js" />
+    <EmbeddedResource Include="wwwroot\app\lib\jquery-2.1.1.min.js" />
+    <EmbeddedResource Include="wwwroot\app\bower_components\angular-route\angular-route.js" />
+    <EmbeddedResource Include="wwwroot\app\bower_components\angular-route\angular-route.min.js" />
+    <Content Include="wwwroot\app\bower_components\angular-route\index.js" />
+    <Content Include="wwwroot\app\bower_components\angular\angular-csp.css" />
+    <EmbeddedResource Include="wwwroot\app\bower_components\angular\angular.js" />
+    <EmbeddedResource Include="wwwroot\app\bower_components\angular\angular.min.js" />
+    <Content Include="wwwroot\app\bower_components\angular\index.js" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\.gitattributes" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\.gitignore" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\dist\.gitattributes" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\dist\.gitignore" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\dist\404.html" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\dist\apple-touch-icon.png" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\dist\browserconfig.xml" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\dist\crossdomain.xml" />
+    <EmbeddedResource Include="wwwroot\app\bower_components\html5-boilerplate\dist\css\main.css" />
+    <EmbeddedResource Include="wwwroot\app\bower_components\html5-boilerplate\dist\css\normalize.css" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\dist\favicon.ico" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\dist\humans.txt" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\dist\img\.gitignore" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\dist\index.html" />
+    <EmbeddedResource Include="wwwroot\app\bower_components\html5-boilerplate\dist\js\main.js" />
+    <EmbeddedResource Include="wwwroot\app\bower_components\html5-boilerplate\dist\js\plugins.js" />
+    <EmbeddedResource Include="wwwroot\app\bower_components\html5-boilerplate\dist\js\vendor\jquery-1.12.0.min.js" />
+    <EmbeddedResource Include="wwwroot\app\bower_components\html5-boilerplate\dist\js\vendor\modernizr-2.8.3.min.js" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\dist\LICENSE.txt" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\dist\robots.txt" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\dist\tile-wide.png" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\dist\tile.png" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\gulpfile.js" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\LICENSE.txt" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\src\.gitattributes" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\src\.gitignore" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\src\404.html" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\src\apple-touch-icon.png" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\src\browserconfig.xml" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\src\crossdomain.xml" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\src\css\main.css" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\src\favicon.ico" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\src\humans.txt" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\src\img\.gitignore" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\src\index.html" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\src\js\main.js" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\src\js\plugins.js" />
+    <EmbeddedResource Include="wwwroot\app\bower_components\html5-boilerplate\src\js\vendor\modernizr-2.8.3.min.js" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\src\robots.txt" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\src\tile-wide.png" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\src\tile.png" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\test\file_content.js" />
+    <Content Include="wwwroot\app\bower_components\html5-boilerplate\test\file_existence.js" />
+    <EmbeddedResource Include="wwwroot\app\app.css" />
+    <EmbeddedResource Include="wwwroot\app\app.js" />
+    <EmbeddedResource Include="wwwroot\app\components\version\interpolate-filter.js" />
+    <EmbeddedResource Include="wwwroot\app\components\version\interpolate-filter_test.js" />
+    <EmbeddedResource Include="wwwroot\app\components\version\version-directive.js" />
+    <EmbeddedResource Include="wwwroot\app\components\version\version-directive_test.js" />
+    <EmbeddedResource Include="wwwroot\app\components\version\version.js" />
+    <EmbeddedResource Include="wwwroot\app\components\version\version_test.js" />
+    <EmbeddedResource Include="wwwroot\app\lib\bootstrap-3-3-7-dist\css\bootstrap-theme.css" />
+    <EmbeddedResource Include="wwwroot\app\lib\bootstrap-3-3-7-dist\css\bootstrap-theme.min.css" />
+    <EmbeddedResource Include="wwwroot\app\lib\bootstrap-3-3-7-dist\css\bootstrap.css" />
+    <EmbeddedResource Include="wwwroot\app\lib\bootstrap-3-3-7-dist\css\bootstrap.min.css" />
+    <Content Include="wwwroot\app\lib\bootstrap-3-3-7-dist\fonts\glyphicons-halflings-regular.svg" />
+    <EmbeddedResource Include="wwwroot\app\lib\bootstrap-3-3-7-dist\js\bootstrap.js" />
+    <EmbeddedResource Include="wwwroot\app\lib\bootstrap-3-3-7-dist\js\bootstrap.min.js" />
+    <EmbeddedResource Include="wwwroot\app\lib\bootstrap-3-3-7-dist\js\npm.js" />
+    <EmbeddedResource Include="wwwroot\app\index-async.html" />
+    <EmbeddedResource Include="wwwroot\app\index.html" />
+    <EmbeddedResource Include="wwwroot\app\view1\view1.html" />
+    <EmbeddedResource Include="wwwroot\app\view1\view1.js" />
+    <EmbeddedResource Include="wwwroot\app\view1\view1_test.js" />
+    <EmbeddedResource Include="wwwroot\app\view2\view2.html" />
+    <EmbeddedResource Include="wwwroot\app\view2\view2.js" />
+    <EmbeddedResource Include="wwwroot\app\view2\view2_test.js" />
+    <Content Include="wwwroot\e2e-tests\protractor.conf.js" />
+    <Content Include="wwwroot\e2e-tests\scenarios.js" />
+    <Content Include="wwwroot\karma.conf.js" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
