--- a/src/XProxy/XProxy.csproj
+++ b/src/XProxy/XProxy.csproj
@@ -37,8 +37,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="LinqInfer, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\linqinfer-1\linqinfer\src\LinqInfer\bin\Debug\LinqInfer.dll</HintPath>
+      <HintPath>..\..\packages\LinqInfer.3.3.1-beta\lib\net461\LinqInfer.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
