--- a/src/XProxy.Core/XProxy.Core.csproj
+++ b/src/XProxy.Core/XProxy.Core.csproj
@@ -38,8 +38,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="LinqInfer, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\linqinfer\src\LinqInfer\bin\Debug\LinqInfer.dll</HintPath>
+      <HintPath>..\..\packages\LinqInfer.3.4.0\lib\net461\LinqInfer.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -63,7 +63,6 @@
     <Compile Include="Analysers\RequestNode.cs" />
     <Compile Include="Analysers\RequestVector.cs" />
     <Compile Include="Analysers\ResourceList.cs" />
-    <Compile Include="Analysers\ProxyStatus.cs" />
     <Compile Include="Analysers\SourceFile.cs" />
     <Compile Include="Analysers\TextIndexer.cs" />
     <Compile Include="AutoInvokerV2.cs" />
