--- a/src/XProxy.Core/XProxy.Core.csproj
+++ b/src/XProxy.Core/XProxy.Core.csproj
@@ -98,6 +98,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Analysers\HttpComparer.cs" />
+    <Compile Include="Analysers\Parsers\JsonToTextTree.cs" />
+    <Compile Include="Analysers\Parsers\OwinContextToTextTree.cs" />
     <Compile Include="Analysers\TextTree.cs" />
     <Compile Include="Analysers\DeferredExecution.cs" />
     <Compile Include="Analysers\FaultAnalyser.cs" />
@@ -289,7 +291,12 @@
     <EmbeddedResource Include="wwwroot\app\node_modules\n3-charts\build\LineChart.min.js" />
     <EmbeddedResource Include="wwwroot\app\node_modules\d3\d3.min.js" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="wwwroot\app\compare-view\comparison.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="wwwroot\app\compare-view\comparison.js" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\packages\System.Data.SQLite.Core.1.0.104.0\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\..\packages\System.Data.SQLite.Core.1.0.104.0\build\net46\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
