Refactor + events + jobs

--- a/src/XProxy.Core/XProxy.Core.csproj
+++ b/src/XProxy.Core/XProxy.Core.csproj
@@ -98,27 +98,35 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Analysers\HttpComparer.cs" />
-    <Compile Include="Analysers\Parsers\JsonToTextTree.cs" />
-    <Compile Include="Analysers\Parsers\OwinContextToTextTree.cs" />
-    <Compile Include="Analysers\TextTree.cs" />
+    <Compile Include="IRequestStore.cs" />
+    <Compile Include="IHttpLog.cs" />
+    <Compile Include="Converters\JsonToTextTree.cs" />
+    <Compile Include="Converters\OwinContextToTextTree.cs" />
+    <Compile Include="Models\TextTree.cs" />
     <Compile Include="Analysers\DeferredExecution.cs" />
     <Compile Include="Analysers\FaultAnalyser.cs" />
     <Compile Include="Analysers\HttpLogger.cs" />
-    <Compile Include="Analysers\LogEntry.cs" />
-    <Compile Include="Analysers\TextTreeComparison.cs" />
+    <Compile Include="Models\LogEntry.cs" />
+    <Compile Include="Models\TextTreeComparison.cs" />
     <Compile Include="Analysers\RequestFeatureMap.cs" />
-    <Compile Include="Analysers\RequestNode.cs" />
+    <Compile Include="Models\RequestNode.cs" />
     <Compile Include="Analysers\RequestVector.cs" />
-    <Compile Include="Analysers\ResourceList.cs" />
-    <Compile Include="Analysers\SourceFile.cs" />
+    <Compile Include="Models\ResourceList.cs" />
+    <Compile Include="Models\SourceFile.cs" />
     <Compile Include="Analysers\TextIndexer.cs" />
     <Compile Include="AutoInvokerV2.cs" />
-    <Compile Include="AutoInvoker.cs" />
+    <Compile Include="AutoInvokerV1.cs" />
+    <Compile Include="Events\FileSystemEventDispatcher.cs" />
+    <Compile Include="Events\IEventDispatcher.cs" />
+    <Compile Include="Events\PublishedEvent.cs" />
     <Compile Include="HttpAppBase.cs" />
     <Compile Include="HttpController.cs" />
     <Compile Include="IHasHttpInterface.cs" />
     <Compile Include="IRequestAnalyser.cs" />
-    <Compile Include="JsonSerialiser.cs" />
+    <Compile Include="Jobs\ContinuousJob.cs" />
+    <Compile Include="Jobs\ExecutionContext.cs" />
+    <Compile Include="Jobs\Runner.cs" />
+    <Compile Include="Converters\JsonSerialiser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HttpProxy.cs" />
     <Compile Include="RequestAnalysisEngine.cs" />
