--- a/src/XProxy.Core/XProxy.Core.csproj
+++ b/src/XProxy.Core/XProxy.Core.csproj
@@ -102,6 +102,7 @@
     <Compile Include="IHttpLog.cs" />
     <Compile Include="Converters\JsonToTextTree.cs" />
     <Compile Include="Converters\OwinContextToTextTree.cs" />
+    <Compile Include="Jobs\DiffEngine.cs" />
     <Compile Include="Models\TextTree.cs" />
     <Compile Include="Analysers\DeferredExecution.cs" />
     <Compile Include="Analysers\FaultAnalyser.cs" />
@@ -125,12 +126,12 @@
     <Compile Include="IRequestAnalyser.cs" />
     <Compile Include="Jobs\ContinuousJob.cs" />
     <Compile Include="Jobs\ExecutionContext.cs" />
-    <Compile Include="Jobs\Runner.cs" />
+    <Compile Include="Jobs\JobRunner.cs" />
     <Compile Include="Converters\JsonSerialiser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HttpProxy.cs" />
     <Compile Include="RequestAnalysisEngine.cs" />
-    <Compile Include="RequestContext.cs" />
+    <Compile Include="Models\RequestContext.cs" />
     <Compile Include="Analysers\RequestStore.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="WebPortal.cs" />
@@ -304,6 +305,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="wwwroot\app\compare-view\comparison.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="wwwroot\app\event-view\events.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="wwwroot\app\event-view\events.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\packages\System.Data.SQLite.Core.1.0.104.0\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\..\packages\System.Data.SQLite.Core.1.0.104.0\build\net46\System.Data.SQLite.Core.targets')" />
