--- a/src/XProxy.Core/XProxy.Core.nuspec
+++ b/src/XProxy.Core/XProxy.Core.nuspec
@@ -2,7 +2,7 @@
 <package>
 	<metadata> 
 		<id>$id$</id>
-		<version>1.1.1</version>
+		<version>1.2.1-beta</version>
 		<title>eXProxy</title>
 		<authors>R Eyres</authors>
 		<owners>R Eyres</owners>
