--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 language: csharp
-solution: XProxy.sln
-install:
-  - mono .nuget/NuGet.exe restore XProxy.sln
-# - nuget restore XProxy.sln
-# - nuget install NUnit.ConsoleRunner -Version 3.6.0 -OutputDirectory build
+mono: none
+dotnet: 1.0.3
+dist: trusty
 script:
-  - xbuild /p:Configuration=Release XProxy.sln
-# - mono ./build/NUnit.ConsoleRunner.3.6.0/tools/nunit3-console.exe ./tests/XProxy.Tests/bin/Release/XProxy.Tests.dll  --where "cat != BuildOmit"
+ - ./build.sh
