--- a/src/XProxy.Core/XProxy.Core.DotNetCore.csproj
+++ b/src/XProxy.Core/XProxy.Core.DotNetCore.csproj
@@ -11,7 +11,7 @@
     <PackageLicenseUrl>https://raw.githubusercontent.com/roberino/x-proxy/master/LICENSE</PackageLicenseUrl>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>git://github.com/roberino/x-proxy</RepositoryUrl>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFrameworks>netcoreapp1.1;netstandard2.0</TargetFrameworks>
     <Version>2.0.1-beta</Version>
     <RootNamespace>XProxy.Core</RootNamespace>
   </PropertyGroup>
